--- a/styles/style.css
+++ b/styles/style.css
@@ -1,38 +1,24 @@
 @font-face {
   font-family: "TT Lakes";
-  src: url("/assets/fonts/TTLakes-Medium.eot");
-  src: local("/assets/fonts/TT Lakes Medium"),
-    local("/assets/fonts/TTLakes-Medium"),
-    url("/assets/fonts/TTLakes-Medium.eot?#iefix") format("embedded-opentype"),
-    url("/assets/fonts/TTLakes-Medium.woff") format("woff"),
-    url("/assets/fonts/TTLakes-Medium.ttf") format("truetype");
+  src: url("assets/fonts/TTLakes-Medium.eot");
+  src: local("assets/fonts/TT Lakes Medium"), local("assets/fonts/TTLakes-Medium"), url("assets/fonts/TTLakes-Medium.eot?#iefix") format("embedded-opentype"), url("assets/fonts/TTLakes-Medium.woff") format("woff"), url("assets/fonts/TTLakes-Medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
 }
-
 @font-face {
   font-family: "TT Lakes";
-  src: url("/assets/fonts/TTLakes-Bold.eot");
-  src: local("/assets/fonts/TT Lakes Bold"), local("/assets/fonts/TTLakes-Bold"),
-    url("/assets/fonts/TTLakes-Bold.eot?#iefix") format("embedded-opentype"),
-    url("/assets/fonts/TTLakes-Bold.woff") format("woff"),
-    url("/assets/fonts/TTLakes-Bold.ttf") format("truetype");
+  src: url("assets/fonts/TTLakes-Bold.eot");
+  src: local("assets/fonts/TT Lakes Bold"), local("assets/fonts/TTLakes-Bold"), url("assets/fonts/TTLakes-Bold.eot?#iefix") format("embedded-opentype"), url("assets/fonts/TTLakes-Bold.woff") format("woff"), url("assets/fonts/TTLakes-Bold.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
 }
-
 @font-face {
   font-family: "TT Lakes";
-  src: url("/assets/fonts/TTLakes-DemiBold.eot");
-  src: local("/assets/fonts/TT Lakes DemiBold"),
-    local("/assets/fonts/TTLakes-DemiBold"),
-    url("/assets/fonts/TTLakes-DemiBold.eot?#iefix") format("embedded-opentype"),
-    url("/assets/fonts/TTLakes-DemiBold.woff") format("woff"),
-    url("/assets/fonts/TTLakes-DemiBold.ttf") format("truetype");
+  src: url("assets/fonts/TTLakes-DemiBold.eot");
+  src: local("assets/fonts/TT Lakes DemiBold"), local("assets/fonts/TTLakes-DemiBold"), url("assets/fonts/TTLakes-DemiBold.eot?#iefix") format("embedded-opentype"), url("assets/fonts/TTLakes-DemiBold.woff") format("woff"), url("assets/fonts/TTLakes-DemiBold.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
 }
-
 * {
   margin: 0;
   padding: 0;
@@ -62,7 +48,6 @@
     visibility: hidden;
   }
 }
-
 @media (min-width: 768px) and (max-width: 1119.5px) {
   .title__repair,
   .title__checkstatus,
@@ -73,7 +58,6 @@
     visibility: hidden;
   }
 }
-
 @media (min-width: 1120px) {
   .header,
   .shadow {
@@ -82,7 +66,6 @@
     visibility: hidden;
   }
 }
-
 .header {
   display: flex;
   align-items: center;
@@ -96,48 +79,38 @@
   align-items: center;
   gap: 16px;
 }
-
 .menu__right {
   display: flex;
   align-items: center;
   justify-content: flex-end;
   gap: 16px;
 }
-
 .menu__items {
   margin-top: 24px;
   margin-bottom: 20px;
 }
-
 .menu__burger {
   margin-left: 16px;
 }
-
 .menu__logo {
   margin-top: 18px;
   margin-right: 20px;
   margin-bottom: 14px;
 }
-
-.menu__divider--1,
-.menu__divider--2 {
+.menu__divider--1, .menu__divider--2 {
   margin-right: 4px;
   margin-left: 4px;
 }
-
 .menu__checkstatus {
   margin-right: 16px;
 }
-
 @media (min-width: 768px) and (max-width: 1119.5px) {
   .menu__burger {
     margin-left: 24px;
   }
-
   .menu__logo {
     margin-right: 240px;
   }
-
   .menu__checkstatus {
     margin-right: 24px;
   }
@@ -158,10 +131,9 @@
   display: flex;
   align-items: center;
   -moz-column-gap: 12px;
-  column-gap: 12px;
+       column-gap: 12px;
   margin-bottom: 24px;
 }
-
 .title__text {
   color: #1b1c21;
   font-family: TT Lakes;
@@ -173,15 +145,13 @@
   line-height: 40px;
   letter-spacing: -0.6px;
 }
-
 @media (min-width: 768px) and (max-width: 1119.5px) {
   .title__left {
     -moz-column-gap: 20px;
-    column-gap: 20px;
+         column-gap: 20px;
     margin-bottom: 32px;
   }
 }
-
 @media (min-width: 1120px) {
   .title {
     display: flex;
@@ -190,12 +160,10 @@
     margin-top: 42px;
     margin-bottom: 8px;
   }
-
   .title__left {
     gap: 30px;
     margin-bottom: 0px;
   }
-
   .title__right {
     display: flex;
     align-items: center;
@@ -203,9 +171,7 @@
     margin-right: 32px;
     gap: 8px;
   }
-
-  .title__repair,
-  .title__checkstatus {
+  .title__repair, .title__checkstatus {
     color: #1b1c21;
     font-family: TT Lakes;
     font-size: 16px;
@@ -223,7 +189,6 @@
   overflow-x: scroll;
   margin-bottom: 24px;
 }
-
 .features__search {
   width: 246px;
   height: 40px;
@@ -242,7 +207,6 @@
   border: 2px solid #b8ffec;
   background: #ffffff;
 }
-
 .features__elements {
   flex-shrink: 0;
   color: #7e7e82;
@@ -256,39 +220,32 @@
   line-height: 24px;
   letter-spacing: -0.2px;
 }
-
 @media (min-width: 768px) and (max-width: 1119.5px) {
   .features {
     margin-bottom: 32px;
   }
-
   .features__search {
     margin-right: 16px;
     margin-left: 24px;
   }
-
   .features__elements {
     margin-right: 19px;
   }
 }
-
 @media (min-width: 1120px) {
   .features {
     flex-wrap: wrap;
     overflow-x: hidden;
     margin-bottom: 8px;
   }
-
   .features__search {
     width: 233px;
     margin-right: 19px;
     margin-left: 32px;
   }
-
   .features__elements {
     margin-right: 35px;
   }
-
   .features__elements:last-child {
     margin-left: 44px;
   }
@@ -300,32 +257,29 @@
   margin-left: 16px;
   margin-right: 16px;
 }
-
 @media (min-width: 768px) and (max-width: 1119.5px) {
   .about {
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: space-between;
     -moz-column-gap: 48px;
-    column-gap: 48px;
+         column-gap: 48px;
     margin-left: 24px;
     margin-right: 25px;
   }
 }
-
 @media (min-width: 1120px) {
   .about {
     height: 400px;
     flex-wrap: wrap;
     -moz-column-gap: 36px;
-    column-gap: 36px;
+         column-gap: 36px;
     margin-left: 34px;
     margin-right: 30px;
   }
 }
 
-.description__text,
-.description__next {
+.description__text, .description__next {
   color: #1b1c21;
   margin-bottom: 16px;
   font-family: TT Lakes;
@@ -338,11 +292,9 @@
   letter-spacing: 0.2px;
   overflow: hidden;
 }
-
 .description__image {
   border-radius: 8px;
 }
-
 @media (min-width: 768px) and (max-width: 1119.5px) {
   .description {
     display: flex;
@@ -353,27 +305,22 @@
     margin-bottom: 10px;
     flex: 1 1 50%;
   }
-
   .description__next {
     height: 35px;
   }
-
   .description__image {
     flex: 1 1 50%;
     width: 50%;
   }
 }
-
 @media (min-width: 1120px) {
   .description {
     width: 500px;
   }
-
   .description__next {
     height: 70px;
     margin-bottom: 14px;
   }
-
   .description__image {
     width: 530px;
   }
@@ -385,7 +332,6 @@
   gap: 8px;
   margin-bottom: 24px;
 }
-
 .expand__text {
   color: #1b1c21;
   font-family: TT Lakes;
@@ -395,6 +341,4 @@
   font-weight: 600;
   line-height: 24px;
   letter-spacing: -0.2px;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
