--- a/styles/style.css
+++ b/styles/style.css
@@ -1,21 +1,32 @@
 @font-face {
   font-family: "TT Lakes";
-  src: url("assets/fonts/TTLakes-Medium.eot");
-  src: local("assets/fonts/TT Lakes Medium"), local("assets/fonts/TTLakes-Medium"), url("assets/fonts/TTLakes-Medium.eot?#iefix") format("embedded-opentype"), url("assets/fonts/TTLakes-Medium.woff") format("woff"), url("assets/fonts/TTLakes-Medium.ttf") format("truetype");
+  src: url("/assets/fonts/TTLakes-Medium.eot");
+  src: local("/assets/fonts/TT Lakes Medium"),
+    local("/assets/fonts/TTLakes-Medium"),
+    url("/assets/fonts/TTLakes-Medium.eot?#iefix") format("embedded-opentype"),
+    url("/assets/fonts/TTLakes-Medium.woff") format("woff"),
+    url("/assets/fonts/TTLakes-Medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
 }
 @font-face {
   font-family: "TT Lakes";
-  src: url("assets/fonts/TTLakes-Bold.eot");
-  src: local("assets/fonts/TT Lakes Bold"), local("assets/fonts/TTLakes-Bold"), url("assets/fonts/TTLakes-Bold.eot?#iefix") format("embedded-opentype"), url("assets/fonts/TTLakes-Bold.woff") format("woff"), url("assets/fonts/TTLakes-Bold.ttf") format("truetype");
+  src: url("/assets/fonts/TTLakes-Bold.eot");
+  src: local("/assets/fonts/TT Lakes Bold"), local("/assets/fonts/TTLakes-Bold"),
+    url("/assets/fonts/TTLakes-Bold.eot?#iefix") format("embedded-opentype"),
+    url("/assets/fonts/TTLakes-Bold.woff") format("woff"),
+    url("/assets/fonts/TTLakes-Bold.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
 }
 @font-face {
   font-family: "TT Lakes";
-  src: url("assets/fonts/TTLakes-DemiBold.eot");
-  src: local("assets/fonts/TT Lakes DemiBold"), local("assets/fonts/TTLakes-DemiBold"), url("assets/fonts/TTLakes-DemiBold.eot?#iefix") format("embedded-opentype"), url("assets/fonts/TTLakes-DemiBold.woff") format("woff"), url("assets/fonts/TTLakes-DemiBold.ttf") format("truetype");
+  src: url("/assets/fonts/TTLakes-DemiBold.eot");
+  src: local("/assets/fonts/TT Lakes DemiBold"),
+    local("/assets/fonts/TTLakes-DemiBold"),
+    url("/assets/fonts/TTLakes-DemiBold.eot?#iefix") format("embedded-opentype"),
+    url("/assets/fonts/TTLakes-DemiBold.woff") format("woff"),
+    url("/assets/fonts/TTLakes-DemiBold.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
 }
@@ -97,7 +108,8 @@
   margin-right: 20px;
   margin-bottom: 14px;
 }
-.menu__divider--1, .menu__divider--2 {
+.menu__divider--1,
+.menu__divider--2 {
   margin-right: 4px;
   margin-left: 4px;
 }
@@ -131,7 +143,7 @@
   display: flex;
   align-items: center;
   -moz-column-gap: 12px;
-       column-gap: 12px;
+  column-gap: 12px;
   margin-bottom: 24px;
 }
 .title__text {
@@ -148,7 +160,7 @@
 @media (min-width: 768px) and (max-width: 1119.5px) {
   .title__left {
     -moz-column-gap: 20px;
-         column-gap: 20px;
+    column-gap: 20px;
     margin-bottom: 32px;
   }
 }
@@ -171,7 +183,8 @@
     margin-right: 32px;
     gap: 8px;
   }
-  .title__repair, .title__checkstatus {
+  .title__repair,
+  .title__checkstatus {
     color: #1b1c21;
     font-family: TT Lakes;
     font-size: 16px;
@@ -263,7 +276,7 @@
     flex-wrap: nowrap;
     justify-content: space-between;
     -moz-column-gap: 48px;
-         column-gap: 48px;
+    column-gap: 48px;
     margin-left: 24px;
     margin-right: 25px;
   }
@@ -273,13 +286,14 @@
     height: 400px;
     flex-wrap: wrap;
     -moz-column-gap: 36px;
-         column-gap: 36px;
+    column-gap: 36px;
     margin-left: 34px;
     margin-right: 30px;
   }
 }
 
-.description__text, .description__next {
+.description__text,
+.description__next {
   color: #1b1c21;
   margin-bottom: 16px;
   font-family: TT Lakes;
@@ -341,4 +355,4 @@
   font-weight: 600;
   line-height: 24px;
   letter-spacing: -0.2px;
-}/*# sourceMappingURL=style.css.map */
+} /*# sourceMappingURL=style.css.map */
